apps/public/drone/drone-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: drone
  labels:
    app: drone
  name: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - image: drone/drone:2
          name: drone
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
