apps/public/drone/drone-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: drone
  labels:
    app: drone-runner
  name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner
  template:
    metadata:
      labels:
        app: drone-runner
    spec:
      containers:
        - name: drone-runner
          image: drone/drone-runner-kube:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: drone-runner
  namespace: drone
  labels:
    app: drone-runner
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: drone-runner
