apps/public/drone/drone-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
  labels:
    app: drone
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: drone
