apps/public/drone/drone-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone
  namespace: drone
  labels:
    external-dns-enabled: "true"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: drone.abbottland.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns/enabled: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: drone.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: drone
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - drone.abbottland.io
    secretName: drone-tls
